--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tensorflow/tfjs": "^4.22.0",
     "axios": "^1.8.3",
     "formidable": "^3.5.2",
+    "framer-motion": "^12.5.0",
     "next": "15.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
