--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tensorflow-models/face-landmarks-detection": "^1.0.6",
     "@tensorflow/tfjs": "^4.22.0",
     "axios": "^1.8.3",
+    "face-api.js": "^0.22.2",
     "firebase": "^11.5.0",
     "formidable": "^3.5.2",
     "framer-motion": "^12.5.0",
